Bug 506389 - Some same page links do not fire EVENT_SYSTEM_SCROLLINGSTART, r=marcoz, davidb